--- a/OpenGL ES2/es2Lighting/.project
+++ b/OpenGL ES2/es2Lighting/.project
@@ -3,6 +3,7 @@
 	<name>es2Lighting</name>
 	<comment></comment>
 	<projects>
+		<project>es2common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -30,4 +31,17 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>common</name>
+			<type>2</type>
+			<locationURI>common</locationURI>
+		</link>
+	</linkedResources>
+	<variableList>
+		<variable>
+			<name>common</name>
+			<value>file:/J:/Android/workspace/es2common/src</value>
+		</variable>
+	</variableList>
 </projectDescription>
