--- a/OpenGL ES2/es2Lighting/AndroidManifest.xml
+++ b/OpenGL ES2/es2Lighting/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="es2.learning"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="18"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".LightingActivity"
