--- a/OpenGL ES2/es2common/AndroidManifest.xml
+++ b/OpenGL ES2/es2common/AndroidManifest.xml
@@ -3,6 +3,6 @@
       package="es2.common"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="18"/>
    
 </manifest>
