--- a/OpenGL ES2/es2viewport/AndroidManifest.xml
+++ b/OpenGL ES2/es2viewport/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="es2.learning"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-sdk android:targetSdkVersion="18" android:minSdkVersion="8"/>
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
